Fix dropdown overflow maintainers name

--- a/ckanext/hdx_request_data/fanstatic/css/request-data.css
+++ b/ckanext/hdx_request_data/fanstatic/css/request-data.css
@@ -256,6 +256,10 @@ h4{
   width: 90%;
 }
 
+.sysadmin-requests-container__dropdown > div {
+  margin-right: 20px;
+}
+
 .sysadmin-requests-container__dropdown-buttons {
   text-align: center;
   margin-bottom: 8px;
